# covid_cough_detection_complete_with_dataset

./: .dockerignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  ADVANCED_FEATURES_SUMMARY.md  API_DOCUMENTATION.md  BUGFIX_REPORT.md  CHANGELOG.md  CHANGES_SUMMARY.md  CHANGES_SUMMARY.txt  COMPLETE_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile.node  ENGINEERING_FIXES_REPORT.md  ENGINEERING_REPORT.md  FINAL_CHANGES_v1.0.13.md  FINAL_COMPLETION_REPORT.md  FINAL_ENGINEERING_CONVERGENCE.md  FINAL_ENGINEERING_CONVERGENCE_v1.0.13.md  FINAL_ENGINEERING_STABILITY_REPORT.md  FINAL_MODIFICATIONS_REPORT.md  FINAL_STABLE_VERSION_REPORT.md  FINAL_SUMMARY.md  FINAL_v1.0.13_COMPLETION_REPORT.md  FIXES_v1.0.10.md  FIXES_v1.0.11.md  FIXES_v1.0.12.md  FIXES_v1.0.13.md  FIXES_v1.0.3.md  FIXES_v1.0.4.md  FIXES_v1.0.8.md  FIXES_v1.0.9.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MODEL_CARD.md  MODIFICATIONS_REPORT.md  PHASE3_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  README.md  (+9 more)
python_project/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python_project/experimental/: README.md  __init__.py  audio_quality_assessment.py  monitoring_system.py  multiclass_classifier.py  patient_history_tracker.py  realtime_audio_stream.py
python_project/src/: __init__.py  app.py  audio_processor.py  audio_quality_assessment.py  model_inference.py  monitoring_system.py  multiclass_classifier.py  patient_history_tracker.py  realtime_audio_stream.py  version.py
python_project/tests/: test_api_contract.py  test_audio_processor_edge_cases.py  test_model_mel_shape_contract.py  (+1 more)
server/: index.ts  (+7 more)
(+83 files in other folders)
